manifests/coderprabhu-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coderprabhu-ui-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: coderprabhu-ip
  labels:
    app: coderprabhu-ui
spec:
  backend:
    serviceName: coderprabhu-ui-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: coderprabhu-ui-backend
  labels:
    app: coderprabhu-ui
spec:
  type: NodePort
  selector:
    app: coderprabhu-ui
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
